# h2fuzz

./: .dockerignore  Dockerfile  README.md  build_ssdeep.sh
experiments/analysis/: README.md
experiments/h2gen/: README.md  config  config_nomut  extract_base.py  h2client.py  input_tree.py  main.py  makecorpus.sh
experiments/proxies/: buildall.sh  circularqueue.py  h2proxy.py  push-echo-server.sh  push-h2proxy.sh  runall.sh  ssl-echo-server.py  ssl-h2proxy.py
fuzzer/: CMakeLists.txt  debug.h  fuzz.sh  package.sh  trim.py
fuzzer/dicts/: headers_lc.dict  hpack.dict  mergedicts.py  minimal.dict  unif.dict
fuzzer/h2_fuzz/: CMakeLists.txt  basedir.h  build_and_send_stream.cpp  callbacks.cpp  callbacks.h  chunkparser.h  client.h  h1_parser.h  h2fuzzconfig.cpp  h2fuzzconfig.h  h2mutator.cpp  h2mutator.h  hash_utils.h  hashcomp.h  main.cc  mut_config_data.conf  nezha_diff.h  normalizer.h  proxy_config.cpp  proxy_config.h  send_one_proxy.cpp  test_proxies_up.cpp  util.h
fuzzer/h2_fuzz/test/: CMakeLists.txt  data_only_config  h1_parser_test.cpp  hashcomp_test.cpp  headers_only_config.conf  headers_stress.conf  libfuzzer_mutator.h  stress_test.cpp  test_callback.cpp  test_chunkparser.cpp  test_config_file.conf  test_crossover.cpp  test_filter_parse.cpp  test_mutate_config.cpp  test_mutator.cpp  test_mutator_common.h  test_normalizer.cpp
fuzzer/h2_serializer/: CMakeLists.txt
fuzzer/h2_serializer/src/: deserializer.h  frame_copier.h
fuzzer/h2_serializer/src/frames/: continuation.h  dataframe.h  frames.h  goaway.h  h2stream.h  headersframe.h  pingframe.h  priorityframe.h  push_promiseframe.h  rst_streamframe.h  settingsframe.h  window_updateframe.h
fuzzer/h2_serializer/src/frames/common/: baseframe.h  depweight.h  headers.h  membuf.h  padded.h  utils.cpp  utils.h
fuzzer/h2_serializer/src/hpacker/: CMakeLists.txt  HPackTable.cpp  HPackTable.h  HPacker.cpp  HPacker.h  README.md
fuzzer/h2_serializer/test/: CMakeLists.txt  test_common.cpp  test_common.h  test_continuation.cpp  test_dataframe.cpp  test_frame_copy.cpp  test_goawayframe.cpp  test_headersframe.cpp  test_pingframe.cpp  test_priorityframe.cpp  test_push_promiseframe.cpp  test_rst_streamframe.cpp  test_settingsframe.cpp  test_stream.cpp  test_utils.cpp  test_window_updateframe.cpp
fuzzer/nezha-0.1/: CMakeLists.txt  FuzzerExtFunctions.def  FuzzerExtFunctions.h  FuzzerFlags.def  FuzzerInterface.h  FuzzerInternal.h  FuzzerLoop.cpp  FuzzerMain.cpp  FuzzerMutate.cpp
fuzzer/proxy_configs/: akamai  apache  ats  azure  caddy  cloudflare  cloudfront  envoy  fastly  h2o  haproxy  nghttp2  nginx  openlitespeed  test_1  test_2  traefik  varnish
(+55 files in other folders)
